feat: se agrego esto en modulo de seguridad